# stt-clipboard

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  security.yml
config/: config-accurate.yaml  config.yaml
docs/: LANGUAGES.md  README.md  changelog.md  index.md
docs/api/: modules.md
docs/architecture/: components.md  overview.md
docs/development/: contributing.md  security.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: auto-paste.md  basic-usage.md  service-management.md  troubleshooting.md  tui.md
scripts/: benchmark.py  install_deps.sh  install_global.sh  install_service.sh  setup_dev.sh  trigger.sh  trigger_paste.sh  trigger_paste_terminal.sh
specs/improvements-v2/: plan.md  tasks.md  workflow.md
src/: __init__.py  audio_capture.py  autopaste.py  cache.py  clipboard.py  config.py  history.py  hotkey.py  languages.py  main.py  notifications.py  punctuation.py  transcription.py  tui.py  tui_settings.py  warmup.py
src/tui_widgets/: __init__.py  confirm_dialog.py  form_fields.py  section_forms.py
systemd/: stt-clipboard.service
tests/: README.md  conftest.py  test_audio_capture.py  test_audio_continuous.py  test_autopaste.py  test_cache.py  test_clipboard.py  test_clipboard_backoff.py  test_config.py  test_history.py  test_hotkey.py  test_imports.py  test_languages.py  test_main.py  test_notifications.py  test_punctuation.py  test_startup_validation.py  test_streaming_transcription.py  test_system.py  test_transcription.py  test_tui.py  test_tui_settings.py  test_tui_widgets.py  test_warmup.py
tests/property_tests/: test_audio_properties.py  test_punctuation_properties.py
