[project]
name = "stt-clipboard"
version = "1.4.3"
description = "Offline multilingual (FR/EN/DE/ES/IT) Speech-to-Text service for Linux and macOS"
authors = [
    {name = "Christopher LOUËT"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    # Core STT Engine
    "faster-whisper==1.1.0",
    "ctranslate2>=4.0.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    # PyTorch (CPU-only)
    "torch==2.5.1",
    "torchaudio==2.5.1",
    # Numerical computing
    "numpy==1.26.4",
    "scipy==1.14.1",
    # Audio capture
    "sounddevice==0.5.1",
    # VAD (Voice Activity Detection)
    "onnxruntime==1.19.2",
    # HTTP requests (required by faster-whisper)
    "requests>=2.31.0",
    # Configuration
    "pyyaml==6.0.2",
    # Logging
    "loguru==0.7.2",
    # TUI (Text User Interface)
    "textual>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=4.1.0",
    # Linting and formatting
    "black==24.10.0",
    "mypy==1.13.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    # Security
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
    "detect-secrets>=1.5.0",
    # Pre-commit
    "pre-commit>=3.6.0",
]
docs = [
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7.0",
]

[project.scripts]
stt = "src.main:main"
stt-tui = "src.main:main_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=4.1.0",
    # Linting and formatting
    "black==24.10.0",
    "mypy==1.13.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    # Security
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
    "detect-secrets>=1.5.0",
    # Pre-commit
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
allow_untyped_calls = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
    "src.audio_capture",
    "src.clipboard",
    "src.config",
    "src.transcription",
]
disable_error_code = ["import-untyped", "union-attr", "var-annotated", "misc"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise ... from err - acceptable for error wrapping
    "S101",  # use of assert detected (OK for tests)
    "S108",  # /tmp usage - secured with 0600 permissions
    "S603",  # subprocess without shell - safe, no shell=True
    "S607",  # subprocess with partial path - system commands in PATH
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S102"]  # Allow asserts and exec in tests

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # assert_used - OK for tests
    "B108",  # hardcoded_tmp_directory - Secured with 0600 permissions
    "B404",  # subprocess import - Required for system commands
    "B603",  # subprocess_without_shell_equals_true - Safe, we don't use shell=True
    "B607",  # start_process_with_partial_path - System commands are in PATH
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
